finalize first version; new category selection and joker; several fixes;

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ node_modules/vue/*
 node_modules/mini.css/*
 !node_modules/mini.css/dist
 
+!node_modules/jquery
+node_modules/jquery/*
+!node_modules/jquery/dist
+
 /dist
 
 
