--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.5.1",
     "mini.css": "^3.0.1",
     "vue": "^2.6.12"
   }
